Bug 31011 - Memory leaks happen when stap's -t option is specified and the stdout stream is not a tty
Summary: Memory leaks happen when stap's -t option is specified and the stdout stream ...
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: runtime (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-30 18:20 UTC by agentzh
Modified: 2023-10-30 18:25 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description agentzh 2023-10-30 18:20:48 UTC
Stap's own `-DDEBUG_MEM` can detecth such memory leaks. Will fix in a patch shortly.
Comment 1 agentzh 2023-10-30 18:25:06 UTC
Fixed in commit 9bddc97bd2d.