PR31011: fixed memory leaks when the -t option is specified and the stdout stream is not a tty.

Also add a new runtime macro STP_TIMING_NSECS to report probe timing stats in
nsecs instead of cycles.